# snitch-c

./: .clang-format  .dir-locals.el  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  coolbuild.c  coolbuild.h  main.c  string_span.c  string_span.h  walk.c  walk.h
include/: buffer.h  span.h  string_span.h
include/snitch/: list.h  report.h  todo.h
minIni/: minGlue.h  minIni.c  minIni.h
source/: list.c  main.c  report.c  string_span.c  todo.c
